# app_for_analyze_bank_transactions

./: .env  .gitignore  LICENSE  README.md  config.py  pyproject.toml
data/: operations.xlsx
logs/: reports_logs.txt  views_logs.txt
reports/: reports.txt
src/: reports.py  services.py  utils.py  views.py
tests/: test_reports.py  test_services.py  test_utils.py  test_views.py
